--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#tf-home" class="page-scroll">Home</a></li>
             <li><a href="#tf-about" class="page-scroll">About</a></li>
-            <li><a href="#tf-team" class="page-scroll">Brands/a></li>
+            <li><a href="#tf-team" class="page-scroll">Brands</a></li>
             <li><a href="#tf-services" class="page-scroll">Store</a></li>
             <li><a href="#tf-testimonials" class="page-scroll">Testimonials</a></li>
             <li><a href="#tf-contact" class="page-scroll">Contact</a></li>
