--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">CannaGoods</a>
+          <a class="navbar-brand" href="index.html"><img src="cannagoods-logo.png" alt="CannaGoods Logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
