--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src="cannagoods-logo.png" alt="CannaGoods Logo"></a>
+          
+          <a class="navbar-brand" href="index.html"><img src="/images/cannagoods-logo.png" alt="CannaGoods Logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
